--- a/kegtab/build.gradle
+++ b/kegtab/build.gradle
@@ -25,7 +25,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
@@ -43,16 +43,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '25.0.3'
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    compileSdkVersion 24
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 28
+        targetSdkVersion 24
 
         testApplicationId "org.kegbot.app.test"
         testInstrumentationRunner "android.test.InstrumentationTestRunner"
@@ -97,19 +93,20 @@ dependencies {
     implementation 'com.hoho.android:usbserial:0.3.0-rc1@aar'
     implementation 'com.google.android.gms:play-services-gcm:9.4.0'
     implementation files('libs/kegbot-api/kegbot-api.jar')
-    implementation 'com.android.support:support-v13:26.1.0'
+    implementation 'com.android.support:support-v13:24.2.0'
     implementation 'com.squareup.okhttp:okhttp:2.0.0'
     implementation 'com.squareup:otto:1.3.4'
-    implementation 'com.google.guava:guava:24.1-jre'
+    implementation 'com.google.guava:guava:18.0'
     implementation 'com.jakewharton:butterknife:4.0.1'
-    annotationProcessor 'com.jakewharton:butterknife:4.0.1'
     implementation 'com.github.kevinsawicki:http-request:5.6'
     implementation 'org.codehaus.jackson:jackson-mapper-asl:1.7.4'
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'com.google.code.findbugs:jsr305:2.0.3'
     implementation 'com.google.protobuf:protobuf-java:2.5.0'
     implementation 'joda-time:joda-time:2.3'
 
-    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
+    annotationProcessor 'com.jakewharton:butterknife:4.0.1'
+
+    implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true;
     }
 
